# ITMO

./: .editorconfig  .gitignore  .gitmodules  README.md
Advent/: Task1.1.js  Task1.2.js  Task2.1.js  Task2.2.js
AlgorithmsandDataStructures/: README.md
AlgorithmsandDataStructures/10thLab/: A(CompareSubstrings).cpp  B(PrefixFunction).cpp  D(SubstringEntrances).cpp  F(LongestCommonSubstringOfK).cpp  J(SuffixArray).cpp  K(SubstringsCount).cpp  L(Shifts).cpp  M(LongestCommonSubstring).cpp
AlgorithmsandDataStructures/10thlab/: C(ZFunction).cpp  E(Period).cpp  G(CheckIfSubstring).cpp
AlgorithmsandDataStructures/11thLab/: A(SimpleFlow).cpp  C(2PipePaths).cpp  GTestGen.cpp  J(AmountOfPaths).cpp  Sample.js  run.txt
AlgorithmsandDataStructures/11thlab/: A(SimpleFlow).js  B(Cut).cpp  D(Matches).cpp  E(BipartialFlow).cpp  F.cpp  G(MaxFlow).cpp  I(FlowSaturation).cpp
AlgorithmsandDataStructures/12thLab/: A(MinCostMaxFlow).cpp  B(Assigment).cpp  E(TSP).cpp
AlgorithmsandDataStructures/12thlab/: D(RPS).cpp
AlgorithmsandDataStructures/13thLab/: B(PrimeFactorisation).cpp  C(BigPrimeChecker).cpp  D(ChineseTheorem).cpp
AlgorithmsandDataStructures/13thlab/: A(MasPrimeChecker).cpp  E(HackRCA).cpp  F(CheatLongMultiply).hs
AlgorithmsandDataStructures/1stLab/: 1task.py  3task.cpp  8task.cpp
AlgorithmsandDataStructures/1stlab/: 10task.cpp  11task.cpp  2task.py  5task.py  6task.py  7task.cpp  9task.cpp
AlgorithmsandDataStructures/2ndLab/: task10d.cpp  task2d.cpp  task3d.cpp  task6d.cpp  task8d.cpp
AlgorithmsandDataStructures/2ndlab/: task11d.cpp  task1d.cpp  task4d.cpp  task5d.cpp  task7d.cpp  task9d.cpp
AlgorithmsandDataStructures/3rdLab/: C(HorseMove).cpp  F(BracketsRemoving).cpp  G(FWithOutput).cpp
AlgorithmsandDataStructures/3rdlab/: A(ValuableWay).cpp  B(LongestIncreasingSubsequence).cpp  D(Levenstein).cpp  E(CoffeeCoupons).cpp  H(AmountOfAccessablePeaks).py  J(Komivojager).cpp  task11d.cpp
AlgorithmsandDataStructures/4thLab/: JJey(RMQpos).cpp  painter(ColoredSegments).cpp  parking(AlmostSet).cpp  rsq.cpp
AlgorithmsandDataStructures/4thlab/: .gitignore  II(mountains)(empty).cpp  crypto(RMulQ).cpp  painter(broken).cpp  painter(wa6).cpp  painter.in  permutation(RPermQ).cpp  permutation(debug).cpp  permutation.in  rmq(RMQcheck).cpp  rmq.in  rmq.out  rmq2(MassUpdate).cpp  rmqreverse(wa).cpp  sparse(done).cpp  sum0(Prefix).cpp  windows(done).cpp
AlgorithmsandDataStructures/5thLab/: A(BST).cpp  Balance(BRtree).cpp  Cout(Treap).cpp  D(ExplicitKey).cpp  Hcolorsonsegment.cpp
AlgorithmsandDataStructures/5thlab/: Esum(Treap).cpp  FKthmax(Treap).cpp  Gmtf(Treap).cpp  decart.cpp  splay.cpp
AlgorithmsandDataStructures/6thLab/: A(LCAlifts).cpp  B(minonpath).cpp  F(LCAremoves).cpp
AlgorithmsandDataStructures/6thlab/: C(addonpath).cpp  H(LcaH).cpp  H(amauntofcolors).cpp
AlgorithmsandDataStructures/7thLab/: b(Requests).cpp  c(Benefit).cpp  e(PossibleSequence).cpp  f(Inversions).cpp  j(BonesChoose).cpp  k(dowry).cpp
AlgorithmsandDataStructures/7thlab/: I(MatrixRoot).cpp  a(Cobbler).cpp  d(HalfSumSplit).cpp  g(DividersOfPermutation).cpp
AlgorithmsandDataStructures/8thLab/: B(Bridges).cpp  C(CutVertex).cpp  E(VertexBiconnection).cpp  G(2Sat).cpp  I(MSTOnline).cpp  J(MST).cpp
AlgorithmsandDataStructures/8thlab/: A(TopSort).cpp  D(EdgeBiconnection).cpp  Dfs.docx  F(CondensationEdges).cpp  H(MSTSearch).cpp
AlgorithmsandDataStructures/9thLab/: A(FloydMatrix).cpp  B(Dijkstra).cpp  E(ShortestPaths).cpp  H(CheapestWay).cpp
AlgorithmsandDataStructures/9thlab/: C(NegativeCircle).cpp  D(ShortestPathsOfSameLen).cpp  F(Shortest3VertexPath).cpp
C++/: BigInt.cpp  BigIntBase.cpp  FirstLection.cpp  FirstLection2.cpp  README.md  calculator.cpp
C++/FirstCourse/: BigInt(strings).cpp
C++/HW1/: Base_convert.cpp  Complex.cpp  Reference_input.cpp  Reference_output.cpp
C++/HW10metricsAndAlgorithms/: AlgorithmsI.h  ChebyshevMetric.h  ChebyshevMetric.hpp  DijkstraAlgorithm.h  DijkstraAlgorithm.hpp  EnumerationAlgorithm.h  EnumerationAlgorithm.hpp  EuclideanMetric.h  MetricsI.h  (+7 more)
Diskret/: README.md
Haskell/: Hello.hs
Haskell/fp-homework/hw0/: LICENSE  README.md  hw0.cabal
Haskell/fp-homework/hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs
Haskell/fp-homework/hw1/: README.md  hw1.cabal
Haskell/fp-homework/hw1/src/: Task1.hs  Task10.hs  Task11.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task7.hs  Task9.hs
Haskell/fp-homework/hw1/test/: Task10Spec.hs  Task11Spec.hs  Task1Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs  Task5Spec.hs  Task7Spec.hs
Haskell/fp-homework/hw2/: README.md  hw2.cabal
Haskell/fp-homework/hw2/app/: Main.hs
Haskell/fp-homework/hw2/src/: InitFS.hs  Invoke.hs  Parser.hs  Types.hs  Utils.hs
Haskell/fp-homework/hw3/: README.md  hw3.cabal
Haskell/fp-homework/hw3/benchmark/: Main.hs  Task1Bench.hs
Haskell/fp-homework/hw3/src/: Task1.hs  Task1Naive.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
Haskell/fp-homework/hw3/test/: Task3Spec.hs  Task4Spec.hs
Haskell/fp-homework/practice/: README.md  practice.cabal
Haskell/fp-homework/practice/src/: Practice.hs
MathAn/: Modul_1.doc  Modul_2.doc
NumreicalMethods/: README.md
OperationSystems/: README.md
OptimizationMethods/: Lab1.ipynb  Lab2.ipynb  Lab3.ipynb  README.md
Paradigms/: .gitignore
ParallelProgramming/: README.md
Programming/: README.md  calculator(andrey).cpp  calculator(concole).cpp  class(cat).cpp  class.cpp  complex nums.py  img download.py  vk.online.py
SoftwareTesting/: README.md
TranslationMethods/: README.md
(+981 files in other folders)
