name:                hw0
version:             0.1.0.0
synopsis:            Synopsis for task 0
description:         Task 0 for FP ITMO course

homepage:            https://github.com/ShuffleZZZ/fp-homework/tree/master/hw0#readme
license:             MIT
license-file:        LICENSE
author:              Glagolev Mikhail
maintainer:          mihpihnaty@yandex.ru
copyright:           2020 Glagolev Mikhail

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     Task1, Task2, Task3, Task4, Task5, Task6
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010