name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/ShuffleZZZ/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Glagolev Mikhail
maintainer:          mihpihnaty@yandex.ru
copyright:           2020 Glagolev Mikhail

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     Task1, Task2, Task3, Task4, Task5, Task7, Task9, Task10, Task11
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Task1Spec, Task2Spec, Task3Spec, Task4Spec, Task5Spec, Task7Spec, Task10Spec, Task11Spec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, hw1, hspec
  default-language:    Haskell2010
