name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/ShuffleZZZ/fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Glagolev Mikhail
maintainer:          mihpihnaty@yandex.ru
copyright:           2020 Glagolev Mikhail

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     InitFS, Invoke, Parser, Types, Utils
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, directory, directory-tree, filepath, optparse-applicative, text, time, transformers, mtl
  default-language:    Haskell2010

executable main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, hw2, directory
  default-language:    Haskell2010